Complete hello world project with glow animation and authors

--- a/web/index.html
+++ b/web/index.html
@@ -6,7 +6,10 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <h1 id="title">Hello World</h1>
+    <div class="container">
+      <p class="subtitle">Bridget and David say</p>
+      <h1 id="title">Hello World</h1>
+    </div>
     <script src="script.js" defer></script>
   </body>
 </html>
